@@ -13,6 +13,8 @@ Fixed: Issue #634: Display check program output.
 
 Fixed: Issue #640: SSL option CACERTIFICATEPATH doesn't work.
 
+Fixed: Issue #657: Fix the "total cpu usage" test for processes with children.
+
 Fixed: Enable color output for rxvt terminal.
 
 
